Added titles to icon footer links

--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
 
   <footer>
     <h3>Other Places</h3>
-    <a class="rnd-btn" href="https://www.aboutcher.co.uk"><i class="fa fa-globe" aria-hidden="true"></i></a>
-    <a class="rnd-btn" href="https://uk.linkedin.com/in/adamboutcher"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
-    <a class="rnd-btn" href="https://github.com/adamboutcher"><i class="fa fa-github" aria-hidden="true"></i></a>
+    <a class="rnd-btn" href="https://www.aboutcher.co.uk" title="Website"><i class="fa fa-globe" aria-hidden="true"></i></a>
+    <a class="rnd-btn" href="https://uk.linkedin.com/in/adamboutcher" title="LinkedIn"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
+    <a class="rnd-btn" href="https://github.com/adamboutcher" title="GitHub"><i class="fa fa-github" aria-hidden="true"></i></a>
   </footer>
 </body>
 </html>
