--- a/index.html
+++ b/index.html
@@ -15,17 +15,27 @@
     <p>Notable Projects I contribute to.</p>
   </header>
   <section class="card">
-    <img src="assets/img/zfs-linux.png" alt="ZFS on Linux Logo" />
-    <h2>OpenZFS Quota for Linux NFS</h2>
-    <p>OpenZFS (a.k.a. ZFS on Linux) Quota system using NFS to allow users to check their quota as ZFS doesn't hook into the standard Linux Quota tooling.</p>
-    <a class="go-btn" href="https://github.com/adamboutcher/zfs-quota"></i> Visit Project</a>
-  </section>
-  <section class="card">
     <img src="assets/img/shared-fail2ban.png" alt="Shared Fail2Ban Logo" />
     <h2>Shared Fail2Ban</h2>
     <p>A Fail2Ban based project designed for clouds and clusters that would benefit from sharing Fail2Ban bans.</p>
     <a class="go-btn" href="https://github.com/bulgemonkey/Shared-Fail2Ban">Visit Project</a>
   </section>
+
+  <section class="card">
+    <img src="assets/img/statping-ng.png" alt="Statping-ng Logo" />
+    <h2>Statping-ng</h2>
+    <p> An updated drop-in for statping. A Status Page for monitoring your websites and applications with beautiful graphs, analytics, and plugins. Run on any type of environment.</p>
+    <a class="go-btn" href="https://github.com/statping-ng/statping-ng"></i> Visit Project</a>
+  </section>
+
+
+  <section class="card">
+    <img src="assets/img/zfs-linux.png" alt="ZFS on Linux Logo" />
+    <h2>OpenZFS Quota for Linux NFS</h2>
+    <p>OpenZFS (a.k.a. ZFS on Linux) Quota system using NFS to allow users to check their quota as ZFS doesn't hook into the standard Linux Quota tooling.</p>
+    <a class="go-btn" href="https://github.com/adamboutcher/zfs-quota"></i> Visit Project</a>
+  </section>
+
   <section class="card">
     <img src="assets/img/librenms-selinux.png" alt="LibreNMS and SELinux Logo" />
     <h2>LibreNMS Agent SELinux</h2>
